# autoforge-api

./: .env.example  .gitignore  Dockerfile  README.md  TODO_VSCODE.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: flm_knowledge.json  sample_knowledge.json
scripts/: backup_db.sh  e2e_test.sh  init_db.py  seed_knowledge.py  wait_for_db.py
src/autoforge/: __init__.py  config.py  interfaces.py  logging.py  main.py  models.py
src/autoforge/adapters/: __init__.py  embedder.py  llm_client.py  metrics.py  neo4j_graph.py  pgvector.py
src/autoforge/auth/: __init__.py  jwt.py
src/autoforge/domains/: __init__.py  ad_optimization.py  customer_support.py  music_production.py  sales.py
src/autoforge/engine/: __init__.py  context.py
tests/: conftest.py  test_api.py  test_unit.py
